--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div id="image1">
         <a name="Home"></a>
-        <img alt="" src="assets/beach.jpg" style="width:100%; height:auto;">
+        <img alt="beach" src="assets/beach.jpg" style="width:100%; height:auto;">
         <div id="video">
             <img alt="" src="" style="width:50%; height:auto; padding-left: 15%; position:absolute; top:15%; left:15%;">
         </div>
