--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
     <div id="menu" class="menu"><!--side menu-->
         <a>Matthew's Hawaiian Shirts</a>
-        <a href="#Home" onmouseover="on" onmouseout="off">Home</a>
-        <a href="#Allshirts" onmouseover="on" onmouseout="off">All shirts</a>
-        <a href="#Myown" onmouseover="on" onmouseout="off">My own</a>
-        <a href="#Mybasket" onmouseover="on" onmouseout="off">My basket</a>
-        <a href="#Contactus" onmouseover="on" onmouseout="off">Contact us</a>
+        <a href="#Home">Demo</a>
+        <a href="#Allshirts">All shirts</a>
+        <a href="#Myown">My own</a>
+        <a href="#Mybasket" >My basket</a>
+        <a href="#Contactus">Contact us</a>
+        <a href="Log">Critical Log</a>
     </div>
     
     <div id="image1">
