--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#Myown">My own</a>
         <a href="#Mybasket" >My basket</a>
         <a href="#Contactus">Contact us</a>
-        <a href="Log">Critical Log</a>
+        <a href="log.html">Critical Log</a>
     </div>
     
     <div id="image1">
@@ -364,6 +364,8 @@
         <p1>Phone us: 07538775665</p1>
         <p1><a href="http://staff.lincoln.ac.uk/wchristian">For more support, click here</a></p1>
     </div>
+
+   
 </body>
 
 </html>	
