--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a name="Home"></a>
         <img alt="beach" src="assets/beach.jpg" style="width:100%; height:auto;">
         <div id="video">
-            <img alt="" src="" style="width:50%; height:auto; padding-left: 15%; position:absolute; top:15%; left:15%;">
+            <iframe style="width:40%; height:auto; padding-left: 15%; position:absolute; top:10%; left:15%;" src="https://www.youtube.com/embed/_nPlv-gbPX0?rel=0" frameborder="0" encrypted-media" allowfullscreen>
+            </iframe>
         </div>
     </div>
     
